--- a/docs/src/main/asciidoc/cache.adoc
+++ b/docs/src/main/asciidoc/cache.adoc
@@ -272,7 +272,7 @@ Congratulations! You just added application data caching to your Quarkus applica
 Do you want to learn more about the Quarkus application data caching abilities?
 The following sections will show you everything there is to know about it.
 
-== Caching annotations
+== Caching annotations API
 
 Quarkus offers a set of annotations that can be used in a CDI managed bean to enable caching abilities.
 
@@ -283,7 +283,7 @@ Loads a method result from the cache without executing the method body whenever 
 When a method annotated with `@CacheResult` is invoked, Quarkus will compute a cache key and use it to check in the cache whether the method has been already invoked.
 If the method has one or more arguments, the key computation is done from all the method arguments if none of them is annotated with `@CacheKey`, or all the arguments annotated with `@CacheKey` otherwise.
 Each non-primitive method argument that is part of the key must implement `equals()` and `hashCode()` correctly for the cache to work as expected.
-This annotation can also be used on a method with no arguments, a default key derived from the cache name is generated in that case.
+This annotation can also be used on a method with no arguments, a default key derived from the cache name is used in that case.
 If a value is found in the cache, it is returned and the annotated method is never actually executed.
 If no value is found, the annotated method is invoked and the returned value is stored in the cache using the computed or generated key.
 
@@ -302,13 +302,8 @@ Removes an entry from the cache.
 
 When a method annotated with `@CacheInvalidate` is invoked, Quarkus will compute a cache key and use it to try to remove an existing entry from the cache.
 If the method has one or more arguments, the key computation is done from all the method arguments if none of them is annotated with `@CacheKey`, or all the arguments annotated with `@CacheKey` otherwise.
-This annotation can also be used on a method with no arguments, a default key derived from the cache name is generated in that case.
+This annotation can also be used on a method with no arguments, a default key derived from the cache name is used in that case.
 If the key does not identify any cache entry, nothing will happen.
-
-[TIP]
-====
-If the `@CacheResult` or `@CacheInvalidate` annotations are used on a method with no parameters, a unique default cache key derived from the cache name will be generated and used.
-====
 
 === @CacheInvalidateAll
 
@@ -320,6 +315,18 @@ When a method argument is annotated with `@CacheKey`, it is identified as a part
 method annotated with `@CacheResult` or `@CacheInvalidate`.
 
 This annotation is optional and should only be used when some of the method arguments are NOT part of the cache key.
+
+== Caching programmatic API
+
+TODO
+
+=== CacheManager
+
+TODO
+
+=== Cache
+
+TODO
 
 == Configuring the underlying caching provider
 
@@ -455,7 +462,7 @@ public class CachedService {
     }
 }
 ----
-<1> A unique default cache key derived from the cache name is generated and used.
+<1> A unique default cache key derived from the cache name is used because the method has no arguments.
 
 === Multiple annotations on a single method
 
